feat: adding images and using it at index

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>Olá, mundo!</h1>
     <p>Este é um exemplo básico de um arquivo HTML.</p>
+    <p>Imagem 1 de chow chow:</p>
+    <img src="./images/chow-chow-6488846_1280.jpg" style="width:100%;"/> 
+    <p>Imagem 2 de chow chow:</p>
+    <img src="./images/chow-chow-6488849_1280.jpg" style="width:100%;"/> 
 </body>
 </html>
